main box settings

--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<main>
+<main class="main">
     <article>
-        <img src="Olivia2.png">
+        <img class="img" src="Olivia2.png" alt="Olivia Klepacka">
         <header>
             <h1>Olivia Klepacka</h1>
             <p>frontend developer</p>
             <p>Z wykształcenia architektka z kilkuletnim doświadczeniem, z zamiłowania architektka wnętrz a także graficzka. W wolnych chwilach gotuje, pływa. Ostatnio również programuje.
                 </p>
+            <p>W sieci: Facebook, GitHub, Instagram.</p>
         </header>
     </article>
 </main>
